[workspace]
members = [
    "examples/lib1",
    "examples/lib2",
    "rian",
    "rian_app",
    "rian_core",
    "rian_proc_macros",
]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "*", default-features = false }
ctor = { version = "*", default-features = false }
futures = { version = "*", default-features = false }
libloading = { version = "0.8", default-features = false }
parking_lot = { version = "*", default-features = false }
serde = { version = "*", default-features = false }
serde_yaml = { version = "*", default-features = false }
tokio = { version = "*", default-features = false }

rian = { version = "0.1.0", path = "./rian" }
rian_core = { version = "0.1.0", path = "./rian_core" }
rian_proc_macros = { version = "0.1.0", path = "./rian_proc_macros" }
