[workspace]
members = ["./crates/examples/*", "./crates/core/*"]
resolver = "2"

[profile.release]
panic = "abort"

[profile.dev]
sanitizer = true
panic = "unwind"

[workspace.dependencies]
anyhow = { version = "*", default-features = false }
chrono = { version = "*", default-features = false }
ctor = { version = "*", default-features = false }
itertools = { version = "*", default-features = false, features = ["use_std"] }
libloading = { version = "0.8", default-features = false }
parking_lot = { version = "*", default-features = false }
paste = { version = "*", default-features = false }
quote = { version = "*", default-features = false }
serde = { version = "*", default-features = false, features = [
    "derive",
    "rc",
    "std",
] }
serde-value = { version = "0.7", default-features = false }
syn = { version = "*", default-features = false }

rian = { version = "0.1.0", path = "./crates/core/rian" }
rian_proc_macros = { version = "0.1.0", path = "./crates/core/rian_proc_macros" }
