[package]
name = "rian"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
ctor.workspace = true
futures = { workspace = true, optional = true }
libloading = { workspace = true, optional = true }
serde.workspace = true
serde_yaml = { workspace = true, optional = true }

rian_proc_macros.workspace = true
# rian_registry.workspace = true

[features]
main = [
    "dep:libloading",
    "dep:serde_yaml",
    "dep:futures",
    "futures/alloc",
    "serde/derive",
    "serde/std",
    "serde/rc",
    "serde/alloc",
]
lib = []
all = ["main", "lib"]
