[package]
name = "dytor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow.workspace = true
ctor.workspace = true
itertools.workspace = true
paste.workspace = true
serde.workspace = true
serde-value.workspace = true

libc.version = "*"

dytor_proc_macros.workspace = true
