[package]
name = "rian_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow.workspace = true
ctor.workspace = true
paste.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true

libc.version = "*"

rian_proc_macros.workspace = true
